third section complete

--- a/index.html
+++ b/index.html
@@ -54,7 +54,79 @@
 
 <div class="section_two">
 <div class="container-fluid">
+	<!-- first column html -->
+	<div class="row row_reverse_style" style="padding-bottom: 100px;">
+		<div class="col-md-2">
+			
+		</div>
+		<div class="col-md-4">
+			<div class="body_h1_tag">
+				<h2>We build successful, long-lasting.</h2>
+			</div>
+			<div class="body_p_tag">
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believabl
+</p><p>
+There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believabl</p>
+			</div>
+
+		
+		<div class="start_button" style="padding-top: 40px;">
+ 			<a class="btn  "  href="">Get Start</a>
+ 		</div>
+
+
+
+		</div>
+
+		<div class="col-md-6">
+			<div class="body_image_tag" style="max-width: 100%; padding-top: 60px;" >
+				<img class="img-fluid" style="width:942px ; height: 593px;" src="img/feature1.jpg" alt="no image found">
+			</div>
+		</div>
+	</div>
+
+<!-- second column html -->
+
+<div class="row " style="padding-bottom: 100px;">
 	
+
+		<div class="col-md-6">
+			<div class="body_image_tag" style="max-width: 97%; padding-top: 60px;" >
+				<img class="img-fluid" style="width:881px; height: 593px;" src="img/feature2.png" alt="no image found">
+			</div>
+		</div>
+
+
+	<div class="col-md-4">
+			<div class="body_h1_tag">
+				<h2>We build successful, long-lasting.</h2>
+			</div>
+			<div class="body_p_tag">
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believabl
+</p><p>
+There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believabl</p>
+			</div>
+
+		
+		<div class="start_button" style="padding-top: 40px;">
+ 			<a class="btn  "  href="">Get Start</a>
+ 		</div>
+
+
+
+		</div>
+
+<!-- empty column -->
+<div class="col-md-2">
+			<div>
+				
+			</div>
+		</div>
+
+
+
+	</div>
+
 </div>
 </div>
 
